[package]
name = "matrix_to_db"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.33.2"
#rusqlite = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }